[package]
name = "yanders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
prost = "0.11.9"
tokio-stream = "0.1.12"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.9.2", features = ["tls"] }

[build-dependencies]
tonic-build = "0.9.2"
